DataList Preview - added missing localizations

--- a/src/Umbraco.Community.Contentment/DataEditors/DataList/data-list.preview.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/DataList/data-list.preview.html
@@ -18,7 +18,7 @@
             <umb-load-indicator></umb-load-indicator>
         </div>
         <div ng-switch-when="noItems" class="well well-small well--limit-width">
-            <span>The data source returned no items to preview.</span>
+            <localize key="contentment_configurePreviewNoItems">The data source returned no items to preview.</localize>
         </div>
         <div ng-switch-when="loaded">
 
