--- a/src/Umbraco.Community.Contentment/DataEditors/Notes/notes.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/Notes/notes.html
@@ -3,4 +3,4 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-readonlyvalue" lk-bind-html-template="model.config.notes"></div>
+<div class="umb-readonlyvalue" lk-bind-html-template="model.config.notes" ng-controller="Umbraco.Community.Contentment.DataEditors.Notes.Controller as vm"></div>
