ItemPicker - added state for empty items from filter
Fixes #103

--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.overlay.html
@@ -39,16 +39,19 @@
                     </div>
 
                     <ul class="umb-card-grid" ng-class="{'-three-in-row': vm.items.length < 7, '-four-in-row': vm.items.length >= 7}" ng-if="vm.listType === 'grid'">
-                        <li ng-class="{ '-disabled': item.disabled }" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm">
+                        <li ng-class="{ '-disabled': item.disabled }" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm as results">
                             <button type="button" class="btn-reset umb-card-grid-item" title="{{ item.name }}" ng-click="vm.select(item)">
                                 <i class="icon" ng-class="item.selected ? 'icon-check color-green' : item.icon || vm.defaultIcon" aria-hidden="true"></i>
                                 {{item.name}}
                             </button>
                         </li>
+                        <li class="alert alert-danger" ng-if="results.length == 0">
+                            <span>No items found for '<em ng-bind="vm.searchTerm"></em>'.</span>
+                        </li>
                     </ul>
 
                     <ul class="umb-actions umb-actions-child" ng-if="vm.listType === 'list'">
-                        <li class="umb-action" ng-class="{ '-disabled': item.disabled }" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm">
+                        <li class="umb-action" ng-class="{ '-disabled': item.disabled }" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm as results">
                             <button type="button" class="umb-action-link umb-outline btn-reset" ng-click="vm.select(item)">
                                 <umb-checkmark ng-if="vm.enableMultiple" checked="item.selected" size="m"></umb-checkmark>
                                 <i class="large icon" ng-class="item.icon || vm.defaultIcon" aria-hidden="true"></i>
@@ -57,6 +60,9 @@
                                     <small ng-bind="item.description"></small>
                                 </span>
                             </button>
+                        </li>
+                        <li class="alert alert-danger" ng-if="results.length == 0">
+                            <span>No items found for '<em ng-bind="vm.searchTerm"></em>'.</span>
                         </li>
                     </ul>
 
