Configuration Editor - Item Grouping
+ groups added to Data List Sources

--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -25,24 +25,29 @@
                                            model="vm.searchTerm"
                                            label-key="placeholders_filter"
                                            text="Type to filter..."
-                                           css-class="w-100 mb3"
+                                           css-class="w-100 mb4"
                                            auto-focus="true">
                         </umb-search-filter>
 
-                        <ul class="umb-actions umb-actions-child">
-                            <li class="umb-action" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm as results">
-                                <button type="button" class="btn-reset umb-action-link" ng-click="vm.select(item)">
-                                    <umb-icon icon="{{item.icon}}" class="large icon" ng-class="item.icon"></umb-icon>
-                                    <span class="menu-label">
-                                        <span ng-bind="item.name"></span>
-                                        <small ng-bind="item.description"></small>
-                                    </span>
-                                </button>
-                            </li>
-                            <li class="alert alert-danger" ng-if="results.length == 0">
-                                <span>No items found for '<em ng-bind="vm.searchTerm"></em>'.</span>
-                            </li>
-                        </ul>
+                        <div ng-repeat="(label, items) in vm.items | lkGroupBy:'group'">
+                            <h5 ng-if="label != 'undefined' && results.length > 0" ng-bind="label"></h5>
+                            <ul class="umb-actions umb-actions-child">
+                                <li class="umb-action" ng-repeat="item in items | orderBy:vm.orderBy | filter:vm.searchTerm as results">
+                                    <button type="button" class="btn-reset umb-action-link" ng-click="vm.select(item)">
+                                        <umb-icon icon="{{item.icon}}" class="large icon" ng-class="item.icon"></umb-icon>
+                                        <span class="menu-label">
+                                            <span ng-bind="item.name"></span>
+                                            <small ng-bind="item.description"></small>
+                                        </span>
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="alert alert-danger" ng-if="(vm.items | filter:vm.searchTerm).length == 0">
+                            <span>No items found for '<em ng-bind="vm.searchTerm"></em>'.</span>
+                        </div>
+
                     </umb-box-content>
                 </umb-box>
 
