Data List - updated various help notes

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentPicker/content-source.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentPicker/content-source.html
@@ -74,7 +74,7 @@
                         <dd><code>$site</code> - ancestor page located at level 1.</dd>
                     </dl>
                     <hr />
-                    <p><strong>Please note,</strong> when using an XPath query, this data source will not work if used within a Nested Content element type. <a href="https://github.com/leekelleher/umbraco-contentment/issues/30#issuecomment-668684508" target="_blank" rel="noopener"><em>This is a known issue.</em></a></p>
+                    <p><strong>Please note,</strong> when using an XPath query, this data source will not work if used within a 'Nested Content' element type. <strong><em>This is a known issue.</em></strong> <a href="https://github.com/leekelleher/umbraco-contentment/issues/30#issuecomment-668684508" target="_blank" rel="noopener">Please see GitHub issue #30 for details.</a></p>
                 </div>
             </div>
         </div>
