ConfigurationEditor - help note, closed the details
This can be backported to Contentment v2.x

--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -52,7 +52,7 @@
                 </umb-box>
 
                 <div class="umb-readonlyvalue" ng-if="vm.help">
-                    <details open ng-class="vm.help.class">
+                    <details ng-class="vm.help.class">
                         <summary><strong ng-bind="vm.help.title"></strong></summary>
                         <div lk-bind-html-template="vm.help.notes"></div>
                     </details>
