--- a/src/Umbraco.Community.Contentment/DataEditors/RenderMacro/render-macro.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/RenderMacro/render-macro.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-readonlyvalue" ng-controller="Umbraco.Community.Contentment.DataEditors.RenderMacro.Controller as vm">
+<div class="umb-readonlyvalue" lk-hide-property-group="{{vm.hidePropertyGroup}}" ng-controller="Umbraco.Community.Contentment.DataEditors.RenderMacro.Controller as vm">
     <div class="umb-rte row-fluid span8" ng-if="vm.loading === true">
         <umb-load-indicator></umb-load-indicator>
     </div>
